--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "virtual-barcade",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
