able to play full game of Tic Tac Toe

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "start": "node ./",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -17,5 +19,8 @@
     "eslint-plugin-prettier": "^2.6.0",
     "jest": "^23.1.0",
     "prettier": "^1.13.5"
+  },
+  "dependencies": {
+    "prompt": "^1.0.0"
   }
 }
